# Aptly

./: .gitignore  02-resume-parse-background.md  CLAUDE (1).md  CLAUDE.md  PRD.md  README.md  ROADMAP (1).md  ROADMAP.md  SKILLS.md  START_FRESH_GUIDE.md  golden_parse_reference.json  render.yaml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_jobs_table.py  0002_extend_jobs.py  0003_add_salary.py  0004_job_analyses.py  0005_create_candidates.py  0006_ingest_runs.py  0007_sources_table.py  0008_bulk_seed_candidates.py  0009_seed_workday_gm.py  0010_seed_ashby_candidates.py  0011_parse_runs.py  0012_users_table.py  0013_employer_sponsorship.py  0014_bulk_load_ats_tokens.py  0015_resolved_companies.py  0016_parse_run_raw_output.py  0017_profile_saved_at.py  0018_seed_more_sources.py  0018_tailor_runs.py  0019_tailor_cache_key.py  0020_ats_runs_columns.py  0021_extension_tables.py  0022_ats_hub.py  0023_active_resume.py  f51a26bd17a9_merge_combine_migration_heads_from_.py
backend/app/: config.py  database.py  main.py
backend/app/api/: admin.py  ats.py  auth.py  cover_letter.py  extension.py  health.py  jobs.py  profile.py  tailor.py
backend/app/cli/: __main__.py  clean_descriptions.py  ingest.py  sponsorship_ingest.py  validate.py
backend/app/models/: __init__.py  candidate.py  cover_letter.py  employer_sponsorship.py  extension_session.py  ingest_run.py  job.py  job_analysis.py  parse_run.py  saved_qa_pair.py  source.py  tailor_run.py  user.py
backend/app/services/: _anthropic_schema.py  active_autofill.py  ats.py  ats_runs.py  cover_letter.py  default_formats.py  demo_candidate.py  docx_export.py  extension_auth.py  ingest.py  keyword_coverage.py  linkedin_import.py  pdf_export.py  profile_parser.py  qa_clustering.py  resume_extractor.py  resume_formats.py  resume_layout.py  skills.py  sponsorship.py  tailor.py  tailor_runs.py
backend/app/sources/: __init__.py  _text.py  ashby.py  base.py  (+7 more)
backend/scripts/: start.sh
backend/tests/: conftest.py  test_active_autofill.py  test_admin_ingest_background.py  test_ashby_integration.py  test_async_ingest.py  test_ats.py  test_ats_customize_download.py  test_ats_hub.py  test_ats_toolkit.py  test_auth.py  test_bulk_load_ats_tokens.py  test_bulk_seed_candidates.py  test_candidate_seed.py  test_certifications_and_cookie_domain.py  test_companies_list.py  test_docx_export.py  test_docx_keyword_edits.py  test_extension.py  test_health.py  test_ingest.py  test_ingest_batching.py  test_ingest_heartbeat.py  test_job_detail.py  test_jobs_filters.py  test_jobs_sponsorship_api.py  test_manual_jobs.py  test_parse_worker_resilience.py  test_parser_overhaul.py  test_parser_structural_rules.py  test_pdf_direct_and_docx_completeness.py  test_pdf_no_text_extract.py  test_profile.py  test_raw_llm_output_and_bullets.py  test_resolved_companies_and_pagination.py  test_resume_source_routing.py  test_resume_upload_and_pagination.py  test_seed_loader.py  test_skills.py  test_sources_ashby.py  test_sources_greenhouse.py  (+9 more)
(+113 files in other folders)
