[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aptly-backend"
version = "0.1.0"
description = "Aptly backend — FastAPI service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "anthropic>=0.45.0",
  "python-docx>=1.1.2",
  # Tailored-resume PDF rendering. Pure-Python (no system libs), so it
  # installs cleanly on the Render free tier and lets us measure exact
  # page count for the 2-page hard cap. DOCX (python-docx) and PDF
  # (reportlab) render IDENTICAL text from the shared `resume_layout`.
  "reportlab>=4.0",
  # Resume-upload text extraction. `pdfplumber` handles the common
  # text-layer PDF; it pulls in `pdfminer.six`. Scanned / image-only
  # PDFs produce no text — the upload endpoint surfaces that as a
  # clear "paste your resume as text instead" error.
  "pdfplumber>=0.11",
  # Required by FastAPI for multipart/form-data parsing (the resume
  # upload endpoint accepts a file via UploadFile). Without it the
  # whole app fails at import time.
  "python-multipart>=0.0.20",
  # Google OAuth (Phase 5 multi-user auth). `authlib` is the
  # well-maintained Python OAuth client; `itsdangerous` is what
  # Starlette's SessionMiddleware uses to sign session cookies.
  "authlib>=1.3",
  "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.6",
  "black>=24.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# B008 — FastAPI's Depends() is intentionally used in argument defaults.
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
